Dev (#1)
* tariff+options works

* contractOptions in progress

* allTariffsTestAdded

* unittests-DB added

* before contractDto fix

* tests ready

* simple fix to Post

* JSON: Infinite recursion fixed

* tariffs for change /possible tariffs added

* error handling for entity not found added

* validation for query parameters added

* Sonar fixed

Co-authored-by: emokeeva <ekaterina.mokeeva@t-systems.com>